--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ flutter:
    - assets/modelgrid1.jpeg
    - assets/modelgrid2.jpeg
    - assets/modelgrid3.jpeg
+   - assets/dress.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
